fix: chart response of docs
